fix: spacing-xl -> spacing-xxl

--- a/src/app/ui/global.scss
+++ b/src/app/ui/global.scss
@@ -42,7 +42,8 @@
   --spacing-smmmd: 15px; // такой макет
   --spacing-md: 16px;
   --spacing-lg: 20px;
-  --spacing-xl: 40px;
+  --spacing-xl: 32px;
+  --spacing-xxl: 42px;
 
   // border
   --border-radius-sm: 4px;
