--- a/src/pages/MatchTrackerPage/ui/Header.module.scss
+++ b/src/pages/MatchTrackerPage/ui/Header.module.scss
@@ -30,7 +30,7 @@
     .refresh-button {
       display: flex;
       align-items: center;
-      padding: var(--spacing-smmmd) var(--spacing-xl);
+      padding: var(--spacing-smmmd) var(--spacing-xxl);
       gap: var(--spacing-xs);
 
       .refresh-icon {
