--- a/src/pages/MatchTrackerPage/ui/MatchTrackerPage.module.scss
+++ b/src/pages/MatchTrackerPage/ui/MatchTrackerPage.module.scss
@@ -2,5 +2,5 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-lg);
-  margin: var(--spacing-xl);
+  margin: var(--spacing-xxl);
 }
